fixes wrong margin on mobile modal, and other tweaks

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1393,15 +1393,21 @@ a,
 
 }
 
-#reviewPanel .btn-tag {
-    margin: 8px;
-    padding: 8px 18px;
-    font-size: 16px;
+#reviewPanel {
+    #sendReviewBtn {
+        margin-top: 30px; 
+    }
 
-    @media screen and (max-width: 375px) {
-        margin: 6px;
-        padding: 10px 12px;
-        font-size: 14px;
+    .btn-tag {
+        margin: 8px;
+        padding: 8px 18px;
+        font-size: 16px;
+
+        @media screen and (max-width: 375px) {
+            margin: 6px;
+            padding: 10px 12px;
+            font-size: 14px;
+        }
     }
 }
 
@@ -2078,6 +2084,7 @@ a,
 
   .modal-content {
     padding-top: $MOBILE_NAVBAR_HEIGHT;
+    margin: 0;
   }
 
   body.modal-open #top-mobile-bar {
